--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -76,6 +76,7 @@ jobs:
           php-version: '8.3'
           coverage: none
           tools: composer:v2, phpstan
+          extensions: bcmath
         env:
           fail-fast: true
       - name: Get composer cache directory
@@ -107,6 +108,7 @@ jobs:
           php-version: ${{ matrix.php-version }}
           coverage: none
           tools: composer:v2
+          extensions: bcmath
         env:
           fail-fast: true
       - name: Get composer cache directory
