--- a/.github/workflows/phar.yml
+++ b/.github/workflows/phar.yml
@@ -23,6 +23,7 @@ jobs:
           php-version: '8.2' # use lower compatible version
           coverage: none
           tools: composer:v2, box
+          extensions: bcmath
         env:
           fail-fast: true
       - name: Get composer cache directory
