--- a/.gitattributes
+++ b/.gitattributes
@@ -11,6 +11,7 @@
 /.phive/                    export-ignore
 /build/                     export-ignore
 /tests/                     export-ignore
+/.editorconfig              export-ignore
 /.gitattributes             export-ignore
 /.gitignore                 export-ignore
 /.php-cs-fixer.dist.php     export-ignore
