--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
         "php": "^8.2",
         "ext-json": "*",
         "composer-runtime-api": "^2.2",
-        "azjezz/psl": "^3.3|^4.2",
+        "azjezz/psl": "^3.3 || ^4.2",
         "eclipxe/enum": "^0.2.7",
         "eclipxe/xlsxexporter": "^2.0.1",
         "guzzlehttp/guzzle": "^7.8.1",
